Add russian translation

--- a/translations.qrc
+++ b/translations.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>translations/sr_RS.qm</file>
+        <file>translations/ru_RU.qm</file>
     </qresource>
 </RCC>
