--- a/translations.qrc
+++ b/translations.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>translations/sr_RS.qm</file>
         <file>translations/ru_RU.qm</file>
+        <file>translations/bg_BG.qm</file>
     </qresource>
 </RCC>
