--- a/translations.qrc
+++ b/translations.qrc
@@ -3,5 +3,6 @@
         <file>translations/sr_RS.qm</file>
         <file>translations/ru_RU.qm</file>
         <file>translations/bg_BG.qm</file>
+        <file>translations/de_DE.qm</file>
     </qresource>
 </RCC>
