--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>340</width>
-    <height>239</height>
+    <height>249</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,7 +25,14 @@
     </sizepolicy>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
+    <item row="1" column="0" colspan="2">
+     <widget class="QPushButton" name="settings">
+      <property name="text">
+       <string>Settings</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0" colspan="2">
      <widget class="QGroupBox" name="groupBox">
       <property name="title">
        <string>Log</string>
@@ -37,14 +44,7 @@
       </layout>
      </widget>
     </item>
-    <item row="1" column="0" colspan="2">
-     <widget class="QPushButton" name="settings">
-      <property name="text">
-       <string>Settings</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
+    <item row="2" column="0" colspan="2">
      <widget class="QPushButton" name="history">
       <property name="text">
        <string>Open request history</string>
@@ -60,7 +60,7 @@
      <x>0</x>
      <y>0</y>
      <width>340</width>
-     <height>22</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -124,32 +124,32 @@
   </action>
   <action name="actionStart">
    <property name="text">
-    <string>Start</string>
+    <string>&amp;Start</string>
    </property>
   </action>
   <action name="actionStop">
    <property name="text">
-    <string>Stop</string>
+    <string>St&amp;op</string>
    </property>
   </action>
   <action name="actionSettings">
    <property name="text">
-    <string>Settings</string>
+    <string>&amp;Settings</string>
    </property>
   </action>
   <action name="actionAbout">
    <property name="text">
-    <string>About</string>
+    <string>&amp;About</string>
    </property>
   </action>
   <action name="actionActive_window">
    <property name="text">
-    <string>Active window</string>
+    <string>Active &amp;window</string>
    </property>
   </action>
   <action name="actionAbort">
    <property name="text">
-    <string>Abort</string>
+    <string>&amp;Abort</string>
    </property>
   </action>
  </widget>
