--- a/settingsdialog.ui
+++ b/settingsdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>485</width>
-    <height>638</height>
+    <height>655</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -88,6 +88,13 @@
      </property>
     </widget>
    </item>
+   <item row="11" column="2">
+    <widget class="QComboBox" name="formatBox">
+     <property name="currentIndex">
+      <number>-1</number>
+     </property>
+    </widget>
+   </item>
    <item row="2" column="1">
     <widget class="QLabel" name="label_2">
      <property name="text">
@@ -99,13 +106,6 @@
     <widget class="QCheckBox" name="hideToTray">
      <property name="text">
       <string>Pressing &lt;X&gt; hides to tray</string>
-     </property>
-    </widget>
-   </item>
-   <item row="11" column="2">
-    <widget class="QComboBox" name="formatBox">
-     <property name="currentIndex">
-      <number>-1</number>
      </property>
     </widget>
    </item>
@@ -137,7 +137,7 @@
      </item>
     </widget>
    </item>
-   <item row="14" column="1" colspan="2">
+   <item row="15" column="1" colspan="2">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -154,13 +154,13 @@
      </property>
     </widget>
    </item>
-   <item row="13" column="1" colspan="2">
+   <item row="14" column="1" colspan="2">
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
       <string>Advanced</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
-      <item row="2" column="0">
+      <item row="3" column="0">
        <widget class="QSpinBox" name="cropX">
         <property name="suffix">
          <string/>
@@ -176,7 +176,7 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
+      <item row="3" column="1">
        <widget class="QSpinBox" name="cropY">
         <property name="prefix">
          <string notr="true">y: </string>
@@ -204,6 +204,23 @@
        </widget>
       </item>
      </layout>
+    </widget>
+   </item>
+   <item row="13" column="2">
+    <widget class="QSpinBox" name="fpsMax">
+     <property name="suffix">
+      <string>FPS</string>
+     </property>
+     <property name="maximum">
+      <number>255</number>
+     </property>
+    </widget>
+   </item>
+   <item row="13" column="1">
+    <widget class="QLabel" name="label_9">
+     <property name="text">
+      <string>Frames Per Second For Recording</string>
+     </property>
     </widget>
    </item>
   </layout>
