--- a/src/aboutbox.ui
+++ b/src/aboutbox.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>590</width>
-    <height>231</height>
+    <height>240</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,6 +18,9 @@
     <widget class="QLabel" name="label">
      <property name="text">
       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/icons/icon.svg&quot; width=&quot;50&quot; style=&quot;vertical-align: middle;&quot;/&gt;&lt;span style=&quot; font-weight:600; vertical-align:middle;&quot;&gt; KShare&lt;/span&gt;&lt;span style=&quot; vertical-align:middle;&quot;&gt; - The free and open source and cross platform screen sharing software&lt;/span&gt;&lt;/p&gt;&lt;p&gt;Version %0&lt;br/&gt;Links: &lt;a href=&quot;https://github.com/ArsenArsen/KShare&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#007af4;&quot;&gt;Source code&lt;/span&gt;&lt;/a&gt;, &lt;a href=&quot;https://github.com/ArsenArsen/KShare/issues&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#007af4;&quot;&gt;Issue tracker&lt;/span&gt;&lt;/a&gt;, &lt;a href=&quot;http://kshare.arsenarsen.com&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#007af4;&quot;&gt;Website&lt;/span&gt;&lt;/a&gt;, &lt;a href=&quot;https://patreon.com/arsen&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#007af4;&quot;&gt;Patreon&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+     <property name="openExternalLinks">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
@@ -281,7 +284,9 @@ p, li { white-space: pre-wrap; }
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="icon.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>buttonBox</sender>
