Add uploading indicator. Fix #73

--- a/src/icon.qrc
+++ b/src/icon.qrc
@@ -18,5 +18,6 @@
         <file>icons/crop.png</file>
         <file>icons/circle.png</file>
         <file>icons/highlighter.png</file>
+        <file>icons/infinity.png</file>
     </qresource>
 </RCC>
